pg02/manifests/kubenuts/kubenuts-internal-gateway/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
   namespace: "kubenuts"
   name: "kubenuts-internal"
spec:
  listeners:
  - name: http-redirect
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app.kubernetes.io/managed-by: kubenuts
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: "pg02-wildcard-cert"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            app.kubernetes.io/managed-by: kubenuts
